RESOLVED FIXED305127
[JSC] Dump Ion Graph when DFG_CRASH/ASSERTing
https://bugs.webkit.org/show_bug.cgi?id=305127
Summary [JSC] Dump Ion Graph when DFG_CRASH/ASSERTing
Keith Miller
Reported 2026-01-08 10:16:25 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-08 10:16:33 PST
Keith Miller
Comment 2 2026-01-08 10:18:34 PST
EWS
Comment 3 2026-01-08 11:40:06 PST
Committed 305302@main (683d6a782c95): <https://commits.webkit.org/305302@main> Reviewed commits have been landed. Closing PR #56267 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.