[JSC] Dump Ion Graph when DFG_CRASH/ASSERTing https://bugs.webkit.org/show_bug.cgi?id=305127 rdar://167778234

Reviewed by Yusuke Suzuki.

Dump the graph before crashing so we can look and the graph prior to the
crash in the UI.

Canonical link: https://commits.webkit.org/305302@main